--- a/index.css
+++ b/index.css
@@ -3,12 +3,16 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 14px;
 }
 .all-countries > div {
-  width: 300px;
+  width: 250px;
 }
 .all-countries img {
   width: 100%;
+  height: 160px;
+  object-fit: cover;
+  object-position: top left;
 }
 header {
   display: flex;
